--- a/zad1/style.css
+++ b/zad1/style.css
@@ -16,6 +16,18 @@ body {
     font-weight: bold;
 }
 
+.candidate1 {
+    height:13px;
+    background-color: rgb(2,96,212);
+    float: left;
+}
+
+.candidate2 {
+    height: 13px;
+    background-color:rgb(255,134,9);
+    float: left;
+}
+
 #container {
     width: 989px;
     margin: auto;
@@ -62,6 +74,10 @@ main {
     border: solid #d3d2cd;
     border-width: 1px 1px 1px 0px;
     background-color: #ffffff;
+}
+
+.miniheader {
+    margin-left: 20px;
 }
 
 #navlist {
@@ -138,12 +154,23 @@ main {
     margin-top: 7px;
 }
 
+.panel_table {
+    width: 965px;
+    height: 100px;
+    float: left;
+    margin-left: 12px;
+    margin-top: 20px;
+    background-color: #e7e7de;
+    border: 1px solid #d3d2cd;
+}
+
 #panel_w_map {
     border: 1px solid #d3d2cd;
     background-color: #e7e7de;
     width: 563px;
     height: 427px;
     float: left;
+    margin-left: 12px;
 }
 
 .percent {
@@ -180,12 +207,46 @@ main {
     text-decoration: underline;
 }
 
+#rangesbox table {
+    border-collapse: collapse;
+    border-spacing: 0px;
+    width: 100%;
+    table-layout: fixed;
+}
+
+#rangesbox table td {
+    border: solid #d3d2cd;
+    border-width: 0px 1px;
+    height: 21px;
+    font-size: 11px;
+}
+
+#rangesbox table tr:first-child td {
+    border-top: 0;
+    border-bottom: 1px solid #d3d2cd;
+    background-color: #f9f8f3;
+}
+
+#rangesbox table tr:last-child td {
+    border-bottom: 0;
+    border-top: 1px solid #d3d2cd;
+    background-color: #f9f8f3;
+}
+
+#rangesbox table tr td:first-child {
+    border-left: 0;
+}
+
+#rangesbox table tr td:last-child {
+    border-right: 0;
+}
+
 .ruler {
     border: 1px solid #bdbdb5;
     width: 159px;
     height: 15px;
     float:left;
-    padding: 2px;
+    padding: 3px 3px 3px 4px;
     background: url("bar.png") no-repeat 0px 0px;
 }
 
@@ -213,6 +274,19 @@ main {
     padding: 3px;
 }
 
+.statmaintable {
+    border-collapse: collapse;
+    border-spacing: 0px;
+    width:967px;
+    margin: 0px -1px;
+}
+
+.statmaintable th {
+    border: 1px solid;
+    background-color: #fbf8f3;
+    padding: 0px;
+}
+
 #strip {
     margin: 6px 0px;
     background-color: #ffffff;
@@ -228,4 +302,20 @@ main {
     background-color: #a90414;
     float: left;
     font-weight: bold;
+}
+
+.tableruler {
+    background: url(bar.png) no-repeat 0px 0px;
+    padding: 2px 0px;
+}
+
+.tableruler div {
+    background-color: rgb(255, 134, 9);
+    width: 100%;
+    height: 13px;
+}
+
+.tableruler div div {
+    background-color: rgb(2, 96, 212);
+    height: 100%;
 }
