--- a/zad1/pkw2005/election/static/style.css
+++ b/zad1/pkw2005/election/static/style.css
@@ -156,7 +156,6 @@ main {
 
 .panel_table {
     width: 965px;
-    height: 100px;
     float: left;
     margin-left: 12px;
     margin-top: 20px;
@@ -278,13 +277,27 @@ main {
     border-collapse: collapse;
     border-spacing: 0px;
     width:967px;
-    margin: 0px -1px;
+    margin: 0px -1px 0px -1px;
 }
 
 .statmaintable th {
     border: 1px solid;
     background-color: #fbf8f3;
     padding: 0px;
+}
+
+.statmaintable td {
+    height: 19px;
+    border: 1px solid rgb(211, 210, 205);
+    padding: 0px 5px;
+}
+
+.statmaintable tr:nth-last-child(2) td{
+    border-bottom: 0;
+}
+
+.statmaintable tr:last-child th {
+    height: 19px;
 }
 
 #strip {
@@ -306,13 +319,14 @@ main {
 
 .tableruler {
     background: url(bar.png) no-repeat 0px 0px;
-    padding: 2px 0px;
+    padding: 0px !important;
 }
 
 .tableruler div {
     background-color: rgb(255, 134, 9);
     width: 100%;
     height: 13px;
+    margin: 3px 0px;
 }
 
 .tableruler div div {
