Map color legend done

--- a/zad1/pkw2005/election/templates/index.html
+++ b/zad1/pkw2005/election/templates/index.html
@@ -243,6 +243,138 @@
                             </table>
                         </div>
                     </div>
+                    <div id="rangesbox">
+                        <table>
+                            <tr>
+                                <td>
+                                    brak
+                                </td>
+                                <td>
+                                    50.00%
+                                </td>
+                                <td>
+                                    &gt;50.00%
+                                </td>
+                                <td>
+                                    &ge;52.27%
+                                </td>
+                                <td>
+                                    &ge;54.54%
+                                </td>
+                                <td>
+                                    &ge;56.81%
+                                </td>
+                                <td>
+                                    &ge;59.08%
+                                </td>
+                                <td>
+                                    &ge;61.35%
+                                </td>
+                                <td>
+                                    &ge;63.62%
+                                </td>
+                                <td>
+                                    &ge;65.89%
+                                </td>
+                                <td>
+                                    &ge;68.16%
+                                </td>
+                                <td>
+                                    &ge;70.43%
+                                </td>
+                            </tr>
+                            <tr>
+                                <td style="background-color: white;">
+                                </td>
+                                <td style="background-color: rgb(190, 255, 167);">
+                                </td>
+                                <td style="background-color: rgb(204, 227, 255);">
+                                </td>
+                                <td style="background-color: rgb(180, 213, 253);">
+                                </td>
+                                <td style="background-color: rgb(153, 199 ,255);">
+                                </td>
+                                <td style="background-color: rgb(125, 183 ,254);">
+                                </td>
+                                <td style="background-color: rgb(90, 164 ,254);">
+                                </td>
+                                <td style="background-color: rgb(53, 144 ,255);">
+                                </td>
+                                <td style="background-color: rgb(2, 115 ,253);">
+                                </td>
+                                <td style="background-color: rgb(2, 96 ,212);">
+                                </td>
+                                <td style="background-color: rgb(1, 74, 163);">
+                                </td>
+                                <td style="background-color: rgb(0, 53, 117);">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td style="background-color: white;">
+                                </td>
+                                <td style="background-color: rgb(190, 255, 167);">
+                                </td>
+                                <td style="background-color: rgb(255, 219, 112);">
+                                </td>
+                                <td style="background-color: rgb(255, 205, 112);">
+                                </td>
+                                <td style="background-color: rgb(255, 193, 94);">
+                                </td>
+                                <td style="background-color: rgb(255, 181, 84);">
+                                </td>
+                                <td style="background-color: rgb(255, 169, 81);">
+                                </td>
+                                <td style="background-color: rgb(255, 157, 57);">
+                                </td>
+                                <td style="background-color: rgb(254, 144, 32);">
+                                </td>
+                                <td style="background-color: rgb(255, 134, 9);">
+                                </td>
+                                <td style="background-color: rgb(231, 121, 0);">
+                                </td>
+                                <td style="background-color: rgb(206, 104, 0);">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    danych
+                                </td>
+                                <td>
+                                    50.00%
+                                </td>
+                                <td>
+                                    &gt;50.00%
+                                <td>
+                                    &ge;52.27%
+                                </td>
+                                <td>
+                                    &ge;54.54%
+                                </td>
+                                <td>
+                                    &ge;56.81%
+                                </td>
+                                <td>
+                                    &ge;59.08%
+                                </td>
+                                <td>
+                                    &ge;61.35%
+                                </td>
+                                <td>
+                                    &ge;63.62%
+                                </td>
+                                <td>
+                                    &ge;65.89%
+                                </td>
+                                <td>
+                                    &ge;68.16%
+                                </td>
+                                <td>
+                                    &ge;70.43%
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+
                 </div>
                 <div id="panel_seemore" class="font11">
                     <p class="bold">
