--- a/zad1/pkw2005/election/static/style.css
+++ b/zad1/pkw2005/election/static/style.css
@@ -1,335 +1,397 @@
-a {
-    text-decoration: none;
-    color: #000000;
+@media all {
+    a {
+        text-decoration: none;
+        color: #000000;
+    }
+
+    a:hover {
+        text-decoration: underline;
+    }
+
+    body {
+        background-color: #F1EEE5;
+        font-family: Tahoma,Verdana,Helvetica,sans-serif;
+    }
+
+    .bold {
+        font-weight: bold;
+    }
+
+    .candidate1 {
+        height:13px;
+        background-color: rgb(2,96,212);
+        float: left;
+    }
+
+    .candidate2 {
+        height: 13px;
+        background-color:rgb(255,134,9);
+        float: left;
+    }
+
+    #container {
+        width: 989px;
+        margin: auto;
+
+    }
+
+    .count {
+        width: 60px;
+        margin-left: 47px;
+        float: left;
+    }
+
+    .dark{
+        background-color: #dedcd0;
+    }
+    .font11 {
+        font-size: 11px;
+    }
+
+    .font17 {
+        font-size: 17px;
+       
+    }
+
+    header {
+        height: 130px;
+        background-color: rgb(118, 128, 141);
+    }
+
+    .lightgreyborder {
+        border: 1px solid rgb(128,128,128);   
+    }
+
+    main {
+        background-color: #f9f8f3;
+        width: 100%;
+        height: 1280px;
+    }
+
+    #mapbox {
+        float: left;
+        width:328px;
+        height:293px;
+        border: solid #d3d2cd;
+        border-width: 1px 1px 1px 0px;
+        background-color: #ffffff;
+    }
+
+    .miniheader {
+        margin-left: 20px;
+    }
+
+    #navlist {
+        background-color: #a8c7d3;
+        height: 29px;
+        border-color: gray;
+        border-style: solid;
+        border-width: 1px;
+        list-style: none;
+        margin: 0px;
+        padding: 0px;
+    }
+
+    #navlist li {
+        border-color: gray;
+        margin-top: 5px;
+        float: left;
+    }
+
+    #navlist li a {
+        margin-left: 10px;
+        color: rgb(255, 255, 255);
+        cursor: auto;
+        display: inline;
+        font-family: Tahoma, Verdana, Helvetica, sans-serif;
+        font-size: 12px;
+        font-weight: bold;
+        text-decoration: none;
+        text-indent: 10px;
+        text-align: left;
+    }
+
+    #navlist li a:hover {
+        color: rgb(220,0,0);
+    }
+
+    #panel_final {
+        margin-top: 45px;
+        width: 370px;
+        height: 164px;
+        float: left;
+        background-color: #e7e7de;
+        border: 1px solid #d3d2cd;
+        margin-left:20px;
+        padding: 5px 5px;
+    }
+
+    #panel_final p {
+        font-size: 17px;
+        text-align: center;
+        width: 100%;
+        margin-bottom: 5px;
+    }
+
+    #panel_seemore {
+        width: 350px;
+        height: 198px;
+        background-color: #dbdcde;
+        float: left;
+        padding: 5px 15px;
+        margin-left:20px;
+    }
+
+    #panel_seemore p {
+        margin:0px;
+    }
+
+    #panel_seemore ul {
+        padding-left: 15px;
+        list-style-image: url("bullet.png");
+    }
+
+    #panel_seemore li {
+        margin-top: 7px;
+    }
+
+    .panel_table {
+        width: 965px;
+        float: left;
+        margin-left: 12px;
+        margin-top: 20px;
+        background-color: #e7e7de;
+        border: 1px solid #d3d2cd;
+    }
+
+    #panel_w_map {
+        border: 1px solid #d3d2cd;
+        background-color: #e7e7de;
+        width: 563px;
+        height: 427px;
+        float: left;
+        margin-left: 12px;
+    }
+
+    .percent {
+        width:65px;
+        margin-left: 7px;
+        float:left;
+
+    }
+
+    #polska {
+        background-color: #f9f8f3;
+        padding: 1px;
+        margin:0px;
+        width:232px;
+        height: 49px;
+        position:relative;
+    }
+
+    #polska a {
+        text-align: center;
+        font-weight: bold;
+        text-decoration: none;
+        color: #000000;
+        height: 20px;
+        width: 100px;
+        position:absolute;
+        top: 50%;
+        margin-top: -10px;
+        left: 50%;
+        margin-left: -50px;
+    }
+
+    #polska a:hover {
+        text-decoration: underline;
+    }
+
+    #rangesbox table {
+        border-collapse: collapse;
+        border-spacing: 0px;
+        width: 100%;
+        table-layout: fixed;
+    }
+
+    #rangesbox table td {
+        border: solid #d3d2cd;
+        border-width: 0px 1px;
+        height: 21px;
+        font-size: 11px;
+    }
+
+    #rangesbox table tr:first-child td {
+        border-top: 0;
+        border-bottom: 1px solid #d3d2cd;
+        background-color: #f9f8f3;
+    }
+
+    #rangesbox table tr:last-child td {
+        border-bottom: 0;
+        border-top: 1px solid #d3d2cd;
+        background-color: #f9f8f3;
+    }
+
+    #rangesbox table tr td:first-child {
+        border-left: 0;
+    }
+
+    #rangesbox table tr td:last-child {
+        border-right: 0;
+    }
+
+    .ruler {
+        border: 1px solid #bdbdb5;
+        width: 159px;
+        height: 15px;
+        float:left;
+        padding: 3px 3px 3px 4px;
+        background: url("bar.png") no-repeat 0px 0px;
+    }
+
+    .score-holder {
+        width: 100%;
+        height: 20px;
+        margin-bottom: 30px;
+    }
+
+    #statbox {
+        border: solid #d3d2cd;
+        border-width: 1px 0px 1px 0px;
+        width: 234px;
+        height: 293px;
+        float: left;
+    }
+
+    #statbox table {
+        width: 100%;
+        height: 242px;
+    }
+
+    #statbox td {
+        border-top:1px solid #fbf8f3;
+        padding: 3px;
+    }
+
+    .statmaintable {
+        border-collapse: collapse;
+        border-spacing: 0px;
+        width:967px;
+        margin: 0px -1px 0px -1px;
+    }
+
+    .statmaintable th {
+        border: 1px solid;
+        background-color: #fbf8f3;
+        padding: 0px;
+    }
+
+    .statmaintable td {
+        height: 19px;
+        border: 1px solid rgb(211, 210, 205);
+        padding: 0px 5px;
+    }
+
+    .statmaintable tr:nth-last-child(2) td{
+        border-bottom: 0;
+    }
+
+    .statmaintable tr:last-child th {
+        height: 19px;
+    }
+
+    #strip {
+        margin: 6px 0px;
+        background-color: #ffffff;
+        width: 100%;
+        height: 40px;
+    }
+
+    #strip-text {
+        height: 24px;
+        padding: 8px 20px;
+        font-size: 16px;
+        color: #ffffff;
+        background-color: #a90414;
+        float: left;
+        font-weight: bold;
+    }
+
+    .tableruler {
+        background: url(bar.png) no-repeat 0px 0px;
+        padding: 0px !important;
+    }
+
+    .tableruler div {
+        background-color: rgb(255, 134, 9);
+        width: 100%;
+        height: 13px;
+        margin: 3px 0px;
+    }
+
+    .tableruler div div {
+        background-color: rgb(2, 96, 212);
+        height: 100%;
+    }
 }
 
-a:hover {
-    text-decoration: underline;
-}
+@media print {
+    * {
+        text-shadow: none !important;
+        box-shadow: none !important;
+        -webkit-print-color-adjust: exact;
+        border-color: #000 !important;
+    }
 
-body {
-    background-color: #F1EEE5;
-    font-family: Tahoma,Verdana,Helvetica,sans-serif;
-}
+    th, #rangesbox table tr:last-child td,
+    #rangesbox table tr td:first-child{
+         background-color: #ffffff !important;
+    }
 
-.bold {
-    font-weight: bold;
-}
+    body {
+        background-color: #ffffff !important;
+        width: 990px !important;
+    }
 
-.candidate1 {
-    height:13px;
-    background-color: rgb(2,96,212);
-    float: left;
-}
+    .panel_table {
+        background-color: #fff !important;
+        border-color: #fff !important;
+    }
 
-.candidate2 {
-    height: 13px;
-    background-color:rgb(255,134,9);
-    float: left;
-}
+    #panel_w_map, #panel_seemore, #panel_final, #polska, .dark {
+        background-color: #fff !important;
+    }
 
-#container {
-    width: 989px;
-    margin: auto;
+    #panel_seemore {
+        border: 1px solid !important;
+    }
 
-}
+    #panel_w_map, .panel_table {
+        margin-left: 0px !important;
+    }
 
-.count {
-    width: 60px;
-    margin-left: 47px;
-    float: left;
-}
+    main {
+        background-color: #fff;
+    }
 
-.dark{
-    background-color: #dedcd0;
-}
-.font11 {
-    font-size: 11px;
-}
+    a, a:visited {
+        text-decoration: underline;
+    }
 
-.font17 {
-    font-size: 17px;
-   
-}
+    a[href]:after {
+        content: " (" attr(title) ")";
+    }
+    abbr[title]:after {
+        content: " (" attr(title) ")";
+    }
+    a[href^="javascript:"]:after,
+    a[href^="#"]:after {
+        content: "";
+    }
 
-header {
-    height: 130px;
-    background-color: rgb(118, 128, 141);
-}
+    header, nav, footer {
+        display: none; 
+    }
 
-.lightgreyborder {
-    border: 1px solid rgb(128,128,128);   
-}
-
-main {
-    background-color: #f9f8f3;
-    width: 100%;
-    height: 1280px;
-}
-
-#mapbox {
-    float: left;
-    width:328px;
-    height:293px;
-    border: solid #d3d2cd;
-    border-width: 1px 1px 1px 0px;
-    background-color: #ffffff;
-}
-
-.miniheader {
-    margin-left: 20px;
-}
-
-#navlist {
-    background-color: #a8c7d3;
-    height: 29px;
-    border-color: gray;
-    border-style: solid;
-    border-width: 1px;
-    list-style: none;
-    margin: 0px;
-    padding: 0px;
-}
-
-#navlist li {
-    border-color: gray;
-    margin-top: 5px;
-    float: left;
-}
-
-#navlist li a {
-    margin-left: 10px;
-    color: rgb(255, 255, 255);
-    cursor: auto;
-    display: inline;
-    font-family: Tahoma, Verdana, Helvetica, sans-serif;
-    font-size: 12px;
-    font-weight: bold;
-    text-decoration: none;
-    text-indent: 10px;
-    text-align: left;
-}
-
-#navlist li a:hover {
-    color: rgb(220,0,0);
-}
-
-#panel_final {
-    margin-top: 45px;
-    width: 370px;
-    height: 164px;
-    float: left;
-    background-color: #e7e7de;
-    border: 1px solid #d3d2cd;
-    margin-left:20px;
-    padding: 5px 5px;
-}
-
-#panel_final p {
-    font-size: 17px;
-    text-align: center;
-    width: 100%;
-    margin-bottom: 5px;
-}
-
-#panel_seemore {
-    width: 350px;
-    height: 198px;
-    background-color: #dbdcde;
-    float: left;
-    padding: 5px 15px;
-    margin-left:20px;
-}
-
-#panel_seemore p {
-    margin:0px;
-}
-
-#panel_seemore ul {
-    padding-left: 15px;
-    list-style-image: url("bullet.png");
-}
-
-#panel_seemore li {
-    margin-top: 7px;
-}
-
-.panel_table {
-    width: 965px;
-    float: left;
-    margin-left: 12px;
-    margin-top: 20px;
-    background-color: #e7e7de;
-    border: 1px solid #d3d2cd;
-}
-
-#panel_w_map {
-    border: 1px solid #d3d2cd;
-    background-color: #e7e7de;
-    width: 563px;
-    height: 427px;
-    float: left;
-    margin-left: 12px;
-}
-
-.percent {
-    width:65px;
-    margin-left: 7px;
-    float:left;
-
-}
-
-#polska {
-    background-color: #f9f8f3;
-    padding: 1px;
-    margin:0px;
-    width:232px;
-    height: 49px;
-    position:relative;
-}
-
-#polska a {
-    text-align: center;
-    font-weight: bold;
-    text-decoration: none;
-    color: #000000;
-    height: 20px;
-    width: 100px;
-    position:absolute;
-    top: 50%;
-    margin-top: -10px;
-    left: 50%;
-    margin-left: -50px;
-}
-
-#polska a:hover {
-    text-decoration: underline;
-}
-
-#rangesbox table {
-    border-collapse: collapse;
-    border-spacing: 0px;
-    width: 100%;
-    table-layout: fixed;
-}
-
-#rangesbox table td {
-    border: solid #d3d2cd;
-    border-width: 0px 1px;
-    height: 21px;
-    font-size: 11px;
-}
-
-#rangesbox table tr:first-child td {
-    border-top: 0;
-    border-bottom: 1px solid #d3d2cd;
-    background-color: #f9f8f3;
-}
-
-#rangesbox table tr:last-child td {
-    border-bottom: 0;
-    border-top: 1px solid #d3d2cd;
-    background-color: #f9f8f3;
-}
-
-#rangesbox table tr td:first-child {
-    border-left: 0;
-}
-
-#rangesbox table tr td:last-child {
-    border-right: 0;
-}
-
-.ruler {
-    border: 1px solid #bdbdb5;
-    width: 159px;
-    height: 15px;
-    float:left;
-    padding: 3px 3px 3px 4px;
-    background: url("bar.png") no-repeat 0px 0px;
-}
-
-.score-holder {
-    width: 100%;
-    height: 20px;
-    margin-bottom: 30px;
-}
-
-#statbox {
-    border: solid #d3d2cd;
-    border-width: 1px 0px 1px 0px;
-    width: 234px;
-    height: 293px;
-    float: left;
-}
-
-#statbox table {
-    width: 100%;
-    height: 242px;
-}
-
-#statbox td {
-    border-top:1px solid #fbf8f3;
-    padding: 3px;
-}
-
-.statmaintable {
-    border-collapse: collapse;
-    border-spacing: 0px;
-    width:967px;
-    margin: 0px -1px 0px -1px;
-}
-
-.statmaintable th {
-    border: 1px solid;
-    background-color: #fbf8f3;
-    padding: 0px;
-}
-
-.statmaintable td {
-    height: 19px;
-    border: 1px solid rgb(211, 210, 205);
-    padding: 0px 5px;
-}
-
-.statmaintable tr:nth-last-child(2) td{
-    border-bottom: 0;
-}
-
-.statmaintable tr:last-child th {
-    height: 19px;
-}
-
-#strip {
-    margin: 6px 0px;
-    background-color: #ffffff;
-    width: 100%;
-    height: 40px;
-}
-
-#strip-text {
-    height: 24px;
-    padding: 8px 20px;
-    font-size: 16px;
-    color: #ffffff;
-    background-color: #a90414;
-    float: left;
-    font-weight: bold;
-}
-
-.tableruler {
-    background: url(bar.png) no-repeat 0px 0px;
-    padding: 0px !important;
-}
-
-.tableruler div {
-    background-color: rgb(255, 134, 9);
-    width: 100%;
-    height: 13px;
-    margin: 3px 0px;
-}
-
-.tableruler div div {
-    background-color: rgb(2, 96, 212);
-    height: 100%;
 }
