--- a/zad1/pkw2005/election/templates/index.html
+++ b/zad1/pkw2005/election/templates/index.html
@@ -442,7 +442,7 @@
                             <th colspan="2">
                                 {{ kand1Nazwa }}
                             </th>
-                            <th width=320 rowspan="3">
+                            <th class="tablerulerhead" width=320 rowspan="3">
                                 Liczba głosów:<br>
                                 na kandydata / ważnych<br>
                                 [%]
@@ -562,7 +562,7 @@
                             <th colspan="2">
                                 {{ kand1Nazwa }}
                             </th>
-                            <th width=320 rowspan="3">
+                            <th class="tablerulerhead" width=320 rowspan="3">
                                 Liczba głosów:<br>
                                 na kandydata / ważnych<br>
                                 [%]
