--- a/zad1/pkw2005/election/templates/index.html
+++ b/zad1/pkw2005/election/templates/index.html
@@ -7,8 +7,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <link href="{% static "style.css" %}" rel="stylesheet" type="text/css">
         <script src= "{% static "jquery-1.12.2.js" %}"> </script>
-        <script src="https://code.highcharts.com/maps/highmaps.js"></script>
-        <script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
+        <script src="{% static "highmaps.js" %}"></script>
+        <script src="{% static "exporting.js" %}"></script>
         <script src= "{% static "map_static.js" %}"> </script>
         <script>
             $(function () {
@@ -548,135 +548,8 @@
                     </table>
                 </div>
                 <div class="panel_table">
-                    <p class="font11 miniheader">
-                        Porównanie wyników głosowania na kandydatów w zależności od siedziby komisji obwodowej
-                    </p>
-                    <table class="font11 statmaintable">
-                        <tr>
-                            <th rowspan="3">
-                                Podział
-                            </th>
-                            <th width=90 rowspan="3">
-                                Liczba głosów ważnych
-                            </th>
-                            <th colspan="2">
-                                {{ kand1Nazwa }}
-                            </th>
-                            <th class="tablerulerhead" width=320 rowspan="3">
-                                Liczba głosów:<br>
-                                na kandydata / ważnych<br>
-                                [%]
-                            </th>
-                            <th colspan="2">
-                                {{ kand2Nazwa }}
-                            </th>
-                        </tr>
-                        <tr>
-                            <th colspan="2">
-                                głosów na kandydata
-                            </th>
-                            <th colspan="2">
-                                głosów na kandydata
-                            </th>
-                        </tr>
-                        <tr>
-                            <th>
-                                liczba
-                            </th>
-                            <th>
-                                %
-                            </th>
-                            <th>
-                                %
-                            </th>
-                            <th>
-                                liczba
-                            </th>
-                        </tr>
-                        {% for r in listaRodzajow %}
-                        <tr>
-                            <td>
-                                {{ r.nazwa }}
-                            </td>
-                            <td>
-                                {{ r.glosowWaznych }}
-                            </td>
-                            <td>
-                                {{ r.glosowKand1 }}
-                            </td>
-                            <td>
-                                {% if r.glosowWaznych > 0 %}
-                                    {{ r.procKand1 }}
-                                {% else %}
-                                    --.--
-                                {% endif %}
-                            </td>
-                            <td class="tableruler">
-                                {% if r.glosowWaznych > 0 %}
-                                <div>
-                                    <div style="width: {{ r.procKand1 }}%;">
-                                    </div>
-                                </div>
-                                {% endif %}
-                            </td>
-                            <td>
-                                {% if r.glosowWaznych > 0 %}
-                                    {{ r.procKand2 }}
-                                {% else %}
-                                    --.--
-                                {% endif %}
-                            </td>
-                            <td>
-                                {{ r.glosowKand2 }}
-                            </td>
-                        </tr>
-                        {% endfor %}
-                        <tr>
-                            <td colspan="7" style="padding-left: 20px;">
-                                Porównanie wyników głosowania na kandydatów w zależności od liczby mieszkańców gminy
-                            </td>
-                        </tr>
-                        {% for r in rozmiary %}
-                        <tr>
-                            <td>
-                                {{ r.nazwa }}
-                            </td>
-                            <td>
-                                {{ r.waz }}
-                            </td>
-                            <td>
-                                {{ r.k1 }}
-                            </td>
-                            <td>
-                                {% if r.waz > 0 %}
-                                    {{ r.p1 }}
-                                {% else %}
-                                    --.--
-                                {% endif %}
-                            </td>
-                            <td class="tableruler">
-                                {% if r.waz > 0 %}
-                                <div>
-                                    <div style="width: {{ r.p1 }}%;">
-                                    </div>
-                                </div>
-                                {% endif %}
-                            </td>
-                            <td>
-                                {% if r.waz > 0 %}
-                                    {{ r.p2 }}
-                                {% else %}
-                                    --.--
-                                {% endif %}
-                            </td>
-                            <td>
-                                {{ r.k2 }}
-                            </td>
-                        </tr>
-                        {% endfor %}
-                    </table>
-
-                </div>
+                    {% include "rodzaje.html" %}
+               </div>
             </main>
             <footer>
                 <p id="about">
